# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_populate_default_statuses.py  0004_alter_status_options.py
task_manager/statuses/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/tasks/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/: base.html  index.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/templates/users/: create.html  delete.html  index.html  login.html  update.html
