[project]
name = "hexlet-code"
version = "0.1.0"
description = "Проект: Менеджер задач (Python)"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "django>=6.0.2",
    "gunicorn>=25.1.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
output-format = "concise"
line-length = 99

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle Errors
    "W", # pycodestyle Warnings
    "C90", # mccabe
    "I", # isort
    "D", # pydocstyle
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PL", # Pylint
    "N", # pep8-naming
    "AIR", # Airflow
    "FAST", # FastAPI
    "DJ" # flake8-django
]
ignore = ["COM812"] # Конфликт с ruff format
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
